--- a/conf/application.ini
+++ b/conf/application.ini
@@ -3,6 +3,6 @@ application.directory = APPLICATION_PATH  "/application"
 application.modelsPath = APPLICATION_PATH  "/application/models"
 application.dispatcher.catchException = TRUE
 application.zookeeperAddressIp.0 = '192.168.100.33:2181'
-
+application.modules=Demo
 
 [product : common]
